--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "@types/react-typist": "^2.0.3",
     "@types/treeify": "^1.0.0",
     "@typescript-eslint/parser": "^5.50.0",
-    "astro": "^2.0.10",
+    "astro": "^2.1.9",
     "eslint": "^8.35.0",
     "eslint-plugin-astro": "^0.23.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "prettier": "^2.8.3",
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-tailwindcss": "^0.2.2",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-typist": "^2.0.5",
     "rehype-autolink-headings": "^6.1.1",
